<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_soi_background_home">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="20dp"
        android:background="@color/white"
        android:weightSum="5"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:orientation="vertical">
        <TextView
            android:textColor="@color/black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/term_text"
            android:padding="10dp"
            android:layout_weight="1.5"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/tx_feedback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feedback_term"
            android:textSize="12sp"
            android:textColor="@color/blue"/>

        <CheckBox
            android:id="@+id/checkBox_age"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textColorHighlight="#CA1616"
            android:textSize="18sp"
            android:text="@string/term_age" />

        <CheckBox
            android:id="@+id/checkBox_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textColorHighlight="#CA1616"
            android:text="@string/term_check" />

        <TextView
            android:id="@+id/tx_first_confirm"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="right"
            android:layout_weight="1.5"
            android:text="@string/confirm"
            android:textColor="#AEAEAE"
            android:padding="10dp"
            android:textSize="20sp" />


    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>

